Added confirmation of removal and deletion of an empty home
