# packages/express_backend/routes/relation-routes.ts
@@ -6,6 +6,7 @@ import {
 	getHomeByName,
 	updateHome,
 	getHomesByUserAndRelation,
+	deleteHome,
 } from "../models/Home-Services.js";
 import {
 	getUserById,
@@ -116,20 +117,21 @@ relationRouter.get(
 );
 
 //deletes a relation between user and home, used when a user leaves a home
+// updated 2 June 2026 to use homeCode over home name
 relationRouter.patch(
-	"/relate/me/:homeName",
+	"/relate/me/:homeCode",
 	requireAuth,
 	async (req: Request, res: Response) => {
 		try {
 			console.log("Deleting relation!");
 
-			const homename = req.params.homeName;
+			const homecode = req.params.homeCode;
 
-			if (typeof homename !== "string") {
+			if (typeof homecode !== "string") {
 				return res.status(400).json({ error: "Invalid home name" });
 			}
 
-			const h = await getHomeByName(homename);
+			const h = await getHomeByCode(homecode);
 
 			if (!h) {
 				return res.status(404).json({ error: "Home not found" });
@@ -147,6 +149,19 @@ relationRouter.patch(
 			if (!u) {
 				return res.status(404).json({ error: "User not found" });
 			}
+			const willDeleteHome =
+				h.userIds.length === 1 &&
+				h.userIds.some((user) => user.userId.equals(u._id));
+
+			// we want to prevent users from accidentally deleting a home by leaving it, so we require them to confirm if they are the last resident and will delete the home by leaving
+			// this warning happens before the database is updated.
+			if (willDeleteHome && req.body?.confirmDeleteHome !== true) {
+				return res.status(409).json({
+					error: "Leaving this home will delete it.",
+					willDeleteHome: true,
+				});
+			}
+
 			const removeOneUser = h.userIds.filter(
 				(user) => !user.userId.equals(u._id)
 			);
@@ -173,7 +188,22 @@ relationRouter.patch(
 			}
 			await u.save();
 
-			res.status(200).json(h);
+			// ADD: here is where we shuld check whether a home is empty
+			// TODO: Add a message saying "You are the last resident. Leaving this home will delete it. Are you sure you want to leave?" and only delete if they confirm
+			// Further, delete all data of rules ,groceries, etc associated with that home.
+			if (willDeleteHome) {
+				// delete the home itself if there are no more users associated with it
+				await deleteHome(h._id);
+				console.log("Deleted home since there are no more residents");
+				return res.status(200).json({
+					_id: h._id.toString(),
+					homeCode: h.homeCode,
+					deletedHome: true,
+					message: "Left home and deleted it",
+				});
+			} else {
+				res.status(200).json(h);
+			}
 		} catch (err) {
 			console.error(err);
 			res.status(500).json({ error: "Failed to remove relationship" });
